--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Let’s build the future of transportation—one innovation at a time 🔩🚀.<
 
     <div class="contact-item">
       <i class="glow">📧</i>
-      <span>Email: <strong class="text"><a href="mailto:emmanuelmuroki1@gmail.com?subject=Academic%20portfolio&body=Hello%20Emmanuel%2C%20I%20saw%20your%20portfolio%20and%20would%20like%20to%20chat!"target="_blank"></a></strong></span>
+      <span>Email: <strong class="text"><a href="mailto:emmanuelmuroki1@gmail.com?subject=Academic%20portfolio&body=Hello%20Emmanuel%2C%20I%20saw%20your%20portfolio%20and%20would%20like%20to%20chat!"target="_blank"> emmanuelmuroki1@gmail.com </a></strong></span>
     </div>
 
     <div class="contact-item">
@@ -83,3 +83,4 @@ Let’s build the future of transportation—one innovation at a time 🔩🚀.<
   </section>
   </body>
 </html>
+
