Refactor index.html for improved structure and content

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <img src="profile.png">
         </section>
     <section class="slideUp">
-        <a href="#contact"> Contact </a>
         <a href="#about"> About </a>
+        <a href="#contact"> Contact </a>
         <a href="#practicals"> Practicals </a>
         <a href="#exams"> Exams </a>
-        <a href="#Projects"> Projects</a>
+        <a href="#projects"> Projects </a>
+        <a href="#summary"> All in One </a>
     </section>
     <section id="about" class="about"> 
         <h2 class="mzingaAbout"> About me </h2>
@@ -49,14 +50,20 @@ Let’s build the future of transportation—one innovation at a time 🔩🚀.<
 
     <div class="contact-item">
       <i class="glow">📧</i>
-      <span>Email: <strong class="text"><a href="mailto:emmanuelmuroki1@gmail.com?subject=Academic%20portfolio&body=Hello%20Emmanuel%2C%20I%20saw%20your%20portfolio%20and%20would%20like%20to%20chat!"target="_blank"> emmanuelmuroki1@gmail.com </a></strong></span>
+      <span>Email: <strong class="text"><a href="mailto:emmanuelmuroki1@gmail.com?subject=Academic%20portfolio&body=Hello%20Emmanuel%2C%20I%20saw%20your%20portfolio%20and%20would%20like%20to%20chat!"target="_blank" class="email"> emmanuelmuroki1@gmail.com </a></strong></span>
     </div>
 
     <div class="contact-item">
       <i class="glow">📱</i>
-      <span>Phone: <strong class="text">0113484685</strong></span>
+      <span>Phone: <strong class="text">
+         <div class="mobile1"> 
+                <strong> 0113484685 </strong>
+                <span class="side-text" id="clickOptions">
+                     <!-- Options of calling will be injected here by JS -->
+                    </span>
+            </div><br> 
+      </strong></span>
     </div>
-
     <div class="contact-item">
       <i class="glow">📞</i>
       <span>Optional Line: <strong class="text">0787654321</strong></span>
@@ -81,6 +88,75 @@ Let’s build the future of transportation—one innovation at a time 🔩🚀.<
   Chat with me on WhatsApp
 </a>
   </section>
+
+  <div class="practicals" id="practicals">
+    <section class="pracs1">
+    <div class="prac1"> <a href="practical1.html">Practical 1</a></div>
+    <div class="prac2"> <a href="practical2.html">Practical 2</a></div>
+    </section>
+    <section class="pracs2">
+    <div class="prac3"> <a href="practical3.html">Practical 3</a></div>
+    <div class="prac4"> <a href="practical4.html">Practical 4</a></div>
+    </section>
+    <section class="pracs3">
+    <div class="prac5"> <a href="practical5.html">Practical 5</a></div>
+    <div class="prac6"> <a href="practical6.html">Practical 6</a></div>
+    </section>
+    <section class="pracs4">
+    <div class="prac7"> <a href="practical7.html">Practical 7</a></div>
+    <div class="prac8"> <a href="practical8.html">Practical 8</a></div>
+    </section>
+  </div>
+
+  <p class="exams" id="exams"> <a href=exams.html>Exams</a> </p>
+  <section class="project" id="projects">
+  <p class="pro1"> PROJECTS </p>
+  <section class="projects">
+  <div class="project1"> <p> <a href="project1.html">Project 1</a></p></div>
+  <div class="project2"> <p> <a href="project2.html">Project 2</a></p></div>
+  <div class="project3"> <p> <a href="project3.html">Project 3</a></p></div>
+  <div class="project4"> <p> <a href="project4.html">Project 4</a></p></div>
+  </section>
+  <p class="pro2"> PROJECTS </p>
+  </section>
+  <section class="summary" id="summary">
+    <table border="10">
+      <tr>
+        <td> Practicals </td>
+        <td> <a href="practical1.html">Practical 1 </td>
+        <td> <a href="practical2.html">Practical 2 </td>
+        <td> <a href="practical3.html">Practical 3 </td>
+        <td> <a href="practical4.html">Practical 4 </td>
+      </tr>
+      <tr>
+        <td> <a href="practical5.html">Practical 5 </td>
+        <td> <a href="practical6.html">Practical 6 </td>
+        <td> <a href="practical7.html">Practical 7 </td>
+        <td> <a href="practical8.html">Practical 8 </td>
+        <td> Practicals </td>
+      </tr>
+      <tr>
+        <td> Exams </td>
+        <td> <a href="exam1.html">Exam 1 </td>
+        <td> <a href="exam2.html">Exam 2 </td>
+        <td> <a href="exam3.html">Exam 3 </td>
+        <td> <a href="exam4.html">Exam 4 </td>
+      </tr>
+      <tr>
+        <td> <a href="exam5.html">Exam 5 </td>
+        <td> <a href="exam6.html">Exam 6 </td>
+        <td> <a href="exam7.html">Exam 7 </td>
+        <td> <a href="exam8.html">Exam 8 </td>
+        <td> Exams </td>
+      </tr>
+      <tr>
+          <td> Projects </td>
+          <td> <a href="project1.html">Project 1</a> </td>
+          <td> <a href="project2.html">Project 2</a> </td>
+          <td> <a href="project3.html">Project 3</a> </td>
+          <td> <a href="project4.html">Project 4</a> </td>
+      </tr>
+    </table>
+  </section>
   </body>
 </html>
-
